Move ScriptManagerImpl::toggleParam to public interface, implement !lookup quest <quest ID or name>